<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_schedule"
        android:icon="@drawable/baseline_schedule_24"
        android:title="@string/nav_schedule" />
    <item
        android:id="@+id/nav_completed"
        android:icon="@drawable/baseline_done_24"
        android:title="@string/nav_completed" />
    <item
        android:id="@+id/nav_add"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/nav_add" />
    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/baseline_chat_bubble_outline_24"
        android:title="@string/nav_chat" />
    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/baseline_more_horiz_24"
        android:title="@string/nav_more" />
</menu>